INOUT/A_0001/TEST/run_report.txt

                                 --~:| ARCA BOX MODEL 0.9 |:~--

+.READING USER DEFINED INTIAL VALUES FROM: ModelLib/gui/tmp/GUI_INIT.tmp...........................+
+..................................................................................................
+.USING INDEX INSTEAD OF DATE -> ASSUMING LIGHT DIRECTION IS FROM DIRECTLY UP......................+
+..................................................................................................
| ENV values from :                                                                                |
|   :........TEMPK should be read from column: 2 but no ENV_FILE. Using parametrisation?           |
|   :........PRESSURE should be read from column: 3 but no ENV_FILE. Using parametrisation?        |
+..................................................................................................+
| Reading Vapour name file ModelLib/Vapours.dat                                                    |
|   :........Compounds picked from Vapours file: 831                                               |
|   :........Total number of condensibes       : 832                                               |
| Reading the list of elemental composition: ModelLib/O_C.dat                                      |
At line 471 of file src/input.f90 (unit = 804, file = 'ModelLib/O_C.dat')
Fortran runtime error: Bad integer for item 2 in list input

Error termination. Backtrace:
#0  0x7f307a2b12ed in ???
#1  0x7f307a2b1ed5 in ???
#2  0x7f307a2b269d in ???
#3  0x7f307a41eba4 in ???
#4  0x7f307a421e9a in ???
#5  0x7f307a423379 in ???
#6  0x7f307a428894 in ???
#7  0x5580ce984e1c in __input_MOD_read_input_data
	at src/input.f90:471
#8  0x5580ce9430e7 in arca_main
	at src/ARCA_main.f90:82
#9  0x5580ce95f577 in main
	at src/ARCA_main.f90:3
